--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <div class="container">
               <div class="row align-items-center">
                 <div class="col-md-6 offset-md-6 text-center text-md-right">
-                  <h1>Presupuestro maestro</h1>
+                  <h1>Presupuesto maestro</h1>
                   <p class="d-block">
                     Es un presupuesto que proporciona un plan global para un ejercicio económico próximo.
                     Generalmente se fija a un año, debiendo incluir el objetivo de utilidad y el programa
