--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
             </button>
           </div>
           <div class="modal-body">
-            <img src="assets/contenido/diapositiva1.jpg" width="100%"/>
+            <img src="assets/contenido/diapositiva1.JPG" width="100%"/>
           </div>
         </div>
       </div>
